# gotosi-rs

./: Cargo.toml  README.md  question.txt
src/: all_isotopes.min.json  gelements.glade  gelements.glade~  main.rs  spins.json
src/ui/: gotosi.glade
