[package]
name = "gotosi"
version = "0.2.0"
authors = ["zwitterio <zwitterio.cromenale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk" }
glib = { git = "https://github.com/gtk-rs/glib" }
gio = { git = "https://github.com/gtk-rs/gio" }

serde="1.0"
serde_derive="1.0"
serde_json="1.0"
